Fix text positionning on mobile

--- a/resources/assets/sass/components/blocks/home__inwestycjeLista.scss
+++ b/resources/assets/sass/components/blocks/home__inwestycjeLista.scss
@@ -419,7 +419,9 @@
         align-items: flex-end;
 
         p {
-            text-align: right;
+            @include breakpoint($md) {
+                text-align: right;
+            }
         }
     }
 
